--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A sample SparkPost webhook processor",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test"
   },
   "keywords": [
     "sparkpost",
